<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_poster"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/poster_hotel"
        android:layout_width="match_parent"
        android:layout_height="450dp"/>

    <LinearLayout
        android:id="@+id/ll_container_detail"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_poster"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/val16"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_hotel_name"
            android:text="@string/kesuma_hotel"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_5_stars"
            android:paddingBottom="@dimen/val16"
            android:text="@string/label_5_stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_address"
            android:background="@android:color/white"
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_container_button"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="@dimen/val16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_container_detail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_book"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/book_now"
            android:padding="@dimen/val16"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_share"
            android:text="@string/share"
            android:padding="@dimen/val16"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>